# migsm

./: README.md
migsa/: Cargo.toml
migsa/src/: lib.rs  mcmc.rs  misa.rs  rvs.rs  utils.rs
migsa/src/data/: partition.rs
migsa/src/mcmc/: samplers.rs
migsa/src/mcmc/samplers/: partition.rs  stick.rs
migsa/src/mcmc/samplers/continuous/: srwm.rs
migsa/src/mcmc/samplers/partition/: gibbs.rs  slice.rs  split_merge.rs
migsa/src/models/: mixture.rs  partition.rs
migsm/: Cargo.toml
migsm/src/: data.rs  dpmm.rs  lib.rs  mcmc.rs  misa.rs  models.rs
migsm/src/data/: partition.rs
migsm/src/mcmc/samplers/: continuous.rs  partition.rs
migsm/src/mcmc/samplers/partition/: gibbs.rs  slice.rs  split_merge.rs
migsm/src/models/: mixture.rs
pymigsa/: Cargo.toml  pyproject.toml  tox.ini
pymigsa/python/migsa/: __init__.py
pymigsa/src/: lib.rs
