[package]
name = "migsa"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion-stats = "0.3.0"
enum_dispatch = "0.3"
itertools = "0.12.0"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
once_cell = "1.17.0"
rand = "0.8"
rayon = "1.6.1"
rv = { version = "0.16", features = ["arraydist", "serde"], path = "../../redpoll/rv" }
serde = "1"
serde_json = "1"
tempfile = "3.6"

[dev-dependencies]
assert = "0.7.4"
itertools = "0.12.0"

[profile.release]
debug = true
