[package]
name = "migsa"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
enum_dispatch = "0.3"
itertools = "0.14"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
rand = "0.9"
rand_xoshiro = "0.7.0"
rayon = "1.6.1"
rv = { version = "0.19", features = ["arraydist"] }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
special = "0.12.0"
tempfile = "3.6"

[dev-dependencies]
assert = "0.7.4"
itertools = "0.12.0"
proptest = "1.9.0"
criterion-stats = "0.3"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "rv/serde1", "rand_xoshiro/serde"]

[profile.release]
debug = true

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
