[package]
name = "pymigsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "migsa"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27"
migsa = { path = "../migsa" }
numpy = { version = "0.27", features = ["nalgebra"] }
nalgebra = "0.34"
rv = { version = "0.19", features = ["arraydist", "serde"] }
rand = "0.9"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
